# SimplexMethod

./: CMakeLists.txt  main.cpp
include/: EigenHandler.hpp  EnumSolver.hpp  Helpers.hpp  LinearProblem.hpp  Solver.hpp  Transformer.hpp
src/: CMakeLists.txt  EigenHandler.cpp  EnumSolver.cpp  Helpers.cpp  LinearProblem.cpp  Solver.cpp  Transformer.cpp
tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
